<resources>
    <string name="app_name">BythewayAnalitics</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="last_activity">Import</string>
    <string name="gallery_item">Gallery</string>
    <string name="slideshow_item">Slideshow</string>
    <string name="tools_item">Tools</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="active_trips">Активные поездки</string>
    <string name="budget_statistic">Статистика бютжета</string>
    <string name="only_phone_number">имеющие только телефон</string>
    <string name="contains_add_information">имеющие доп. информацию</string>
    <string name="fly_hours">пользователи с перелётами</string>
    <string name="users_statistic">статистика пользователей</string>
    <string name="top_cities">Частые города</string>
    <string name="social_networks">Социальные сети</string>
    <string name="contains_any_networks">имеющие хотя бы одну соц сеть:</string>
    <string name="contains_TG">TG: 123 (3%)</string>
    <string name="contains_VK">VK: 123 (3%)</string>
    <string name="contains_whatsApp">WhatsApp: 123 (3%)</string>
    <string name="contains_FB">FB: 1223 (30%)</string>
    <string name="contains_CS">CS: 122 (3%)</string>
    <string name="count_mans">мужчин:</string>
    <string name="count_woman">женщин:</string>
    <string name="count_any_sex">неопределено:</string>
    <string name="count_users_have">колличества пользователей имеющих:</string>
    <string name="not_created_trips">не создали путешествие</string>
    <string name="total_quantity_users">общее колличество пользователей:</string>
    <string name="count_active_trips">колличество активных поездок:</string>
    <string name="count_not_active_trips">колличество не созданных поездок</string>
    <string name="statistic_by_params">сттатистика по параметрам</string>
    <string name="count_types_moving">колличество пользовательских видов передвижения</string>
    <string name="groups_users_by_age">группы пользователей по возрасту</string>
    <string name="count_sexes">количество пользователей каждого пола:</string>
    <string name="count_new_users">колличество пользователей за последние 24 часа:</string>
    <string name="tokens">токены</string>

</resources>
