<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/last_activity_date"
            android:title="Last activity" />
        <item
            android:id="@+id/statistic_on_param"
            android:title="Statistic on parameters" />
        <item
            android:id="@+id/top_cities"
            android:title="@string/top_cities" />
        <item
            android:id="@+id/count_users"
            android:title="@string/count_users" />
        <item
            android:id="@+id/social_networks"
            android:title="@string/social_networks" />
        <item
            android:id="@+id/not_created_trip"
            android:title="@string/not_created_trips" />
        <item
            android:id="@+id/fly_hours"
            android:title="@string/fly_hours" />
        <item
            android:id="@+id/budget_statistic"
            android:title="@string/budget_statistic" />
        <item
            android:id="@+id/active_trips"
            android:title="@string/active_trips" />
        <item
            android:id="@+id/only_phone_number"
            android:title="@string/only_phone_number" />
        <item
            android:id="@+id/contains_add_information"
            android:title="@string/contains_add_information" />
        <item
            android:id="@+id/parser_email"
            android:title="Email Parse" />
    </group>


</menu>
